# caffe_inference

./: CMakeLists.txt  README.md  cnpy.cpp  main.cpp  net.cpp  utilities.cpp
include/: cnpy.h  helper.h  net.h  utilities.h
include/layers/: conv_layer.h  fc_layer.h  layer.h  pooling_layer.h  relu_layer.h  softmax_layer.h
layers/: conv_layer.cpp  fc_layer.cpp  pooling_layer.cpp  relu_layer.cpp  softmax_layer.cpp
